<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.bogda</groupId>
	<artifactId>translationBE</artifactId>
	<version>0.0.2</version>
  	<packaging>pom</packaging>
  	<name>bogda-backend-java-app</name>
	<description>BogdaApplication</description>
    <modules>
        <module>BogdaApi</module>
        <module>BogdaTask</module>
        <module>BogdaService</module>
        <module>BogdaIntegration</module>
        <module>BogdaRepository</module>
        <module>BogdaCommon</module>
    </modules>
    <properties>
		<java.version>17</java.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-bom</artifactId>
				<version>4.1.118.Final</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- Azure SDK 版本统一管理，确保 azure-identity 和 azure-core 版本兼容 -->
			<!-- 升级 azure-identity 到 1.14.0+ 以匹配 azure-core 1.45.0+ 的 AccessToken 构造函数 -->
			<dependency>
				<groupId>com.azure</groupId>
				<artifactId>azure-core</artifactId>
				<version>1.57.0</version>
			</dependency>
			<dependency>
				<groupId>com.azure</groupId>
				<artifactId>azure-identity</artifactId>
				<version>1.14.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<!-- 最基础的 Checkstyle 插件配置，多模块通用 -->
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-checkstyle-plugin</artifactId>-->
<!--				<version>3.5.0</version>-->
<!--				<configuration>-->
<!--					&lt;!&ndash; 使用 UTF-8 编码 &ndash;&gt;-->
<!--					<encoding>UTF-8</encoding>-->
<!--					&lt;!&ndash; 指向刚才创建的配置文件 &ndash;&gt;-->
<!--					<configLocation>config/checkstyle/checkstyle.xml</configLocation>-->
<!--					&lt;!&ndash; 只在有真正错误时失败，当前规则比较宽松 &ndash;&gt;-->
<!--					<failsOnError>true</failsOnError>-->
<!--					<consoleOutput>true</consoleOutput>-->
<!--				</configuration>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>validate</id>-->
<!--						<phase>validate</phase>-->
<!--						<goals>-->
<!--							<goal>check</goal>-->
<!--						</goals>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->

		</plugins>
	</build>

</project>
